# SWEN2022

./: _C Opleveren 20-6-2022.pptx
TEST_Zonnescherm_09NOV22/: CMakeLists.txt  Makefile  main.cpp  test.cpp  test.h
Zonnescherm_01NOV22/: CMakeLists.txt  binnensensor.h  buitensensor.h  events.h  fsm.cpp  fsm.h  main.cpp  states.h  uvsensor.h  zonnescherm.h
